force-app/main/default/objects/Opportunity/fields/A_d_sactiv_son_int_r_t__c.field-meta.xml
<CustomField>
    <fullName>A_d_sactiv_son_int_r_t__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A désactivé son intérêt</label>
    <type>Checkbox</type>
</CustomField>