force-app/main/default/objects/Opportunity/fields/A_ete_approuve__c.field-meta.xml
<CustomField>
    <fullName>A_ete_approuve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A été approuvé</label>
    <type>Checkbox</type>
</CustomField>