force-app/main/default/objects/Opportunity/fields/A_t_l_charg_la_plaquette__c.field-meta.xml
<CustomField>
    <fullName>A_t_l_charg_la_plaquette__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A téléchargé la plaquette</label>
    <type>Checkbox</type>
</CustomField>