force-app/main/default/objects/Opportunity/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>TEXT (Contact_central__r.Age__c)</formula>
    <label>Age</label>
    <type>Text</type>
</CustomField>