force-app/main/default/objects/Opportunity/fields/Ann_e_du_dipl_me__c.field-meta.xml
<CustomField>
    <fullName>Ann_e_du_dipl_me__c</fullName>
    <formula>Contact_central__r.Ann_e_du_dipl_me__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Année du diplôme</label>
    <type>Text</type>
</CustomField>