force-app/main/default/objects/Opportunity/fields/Anne_validite__c.field-meta.xml
<CustomField>
    <fullName>Anne_validite__c</fullName>
    <formula>TEXT( Account.Annee_validite__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Année de validité</label>
    <type>Text</type>
</CustomField>