force-app/main/default/objects/Opportunity/fields/Anniversaire_date_du_don__c.field-meta.xml
<CustomField>
    <fullName>Anniversaire_date_du_don__c</fullName>
    <formula>AND( 
TODAY()&gt;=(DATE(YEAR(TODAY()),MONTH(Date_du_don__c),DAY(Date_du_don__c))-30), 
TODAY()&lt;=DATE(YEAR(TODAY()),MONTH(Date_du_don__c),DAY(Date_du_don__c)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversaire date du don</label>
    <type>Checkbox</type>
</CustomField>