force-app/main/default/objects/Opportunity/fields/Besoin_VAP__c.field-meta.xml
<CustomField>
    <fullName>Besoin_VAP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Si cochée, l&apos;opportunité nécessite une VAP.</inlineHelpText>
    <label>Besoin VAP</label>
    <type>Checkbox</type>
</CustomField>