force-app/main/default/objects/Opportunity/fields/BPC__c.field-meta.xml
<CustomField>
    <fullName>BPC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Définit le reponsable logistique</description>
    <label>BPC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunit_s1</relationshipName>
    <type>Lookup</type>
</CustomField>