force-app/main/default/objects/Opportunity/fields/CA_attendu__c.field-meta.xml
<CustomField>
    <fullName>CA_attendu__c</fullName>
    <label>CA attendu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>