force-app/main/default/objects/Opportunity/fields/CA_Projet__c.field-meta.xml
<CustomField>
    <fullName>CA_Projet__c</fullName>
    <description>CA projeté</description>
    <formula>Amount *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CA de l&apos;opportunité x % de probabilité</inlineHelpText>
    <label>CA Projeté</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>