force-app/main/default/objects/Opportunity/fields/Case_pour_cumul_Intra__c.field-meta.xml
<CustomField>
    <fullName>Case_pour_cumul_Intra__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case pour cumul Intra</label>
    <type>Checkbox</type>
</CustomField>