force-app/main/default/objects/Opportunity/fields/Code_Agresso_Opportunit__c.field-meta.xml
<CustomField>
    <fullName>Code_Agresso_Opportunit__c</fullName>
    <description>Ce champ est remplit automatiquement en se basant sur &quot; RecordType + Exercice + Compteur Opp&quot;</description>
    <label>Code Agresso Opportunité</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>