force-app/main/default/objects/Opportunity/fields/Code_Produit__c.field-meta.xml
<CustomField>
    <fullName>Code_Produit__c</fullName>
    <label>Code Produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>