force-app/main/default/objects/Opportunity/fields/Commentaire_devis__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_devis__c</fullName>
    <label>Commentaire devis</label>
    <type>TextArea</type>
</CustomField>