force-app/main/default/objects/Opportunity/fields/Compteur_OPP__c.field-meta.xml
<CustomField>
    <fullName>Compteur_OPP__c</fullName>
    <description>Compteur opportunité</description>
    <displayFormat>{000000}</displayFormat>
    <label>Compteur OPP</label>
    <type>AutoNumber</type>
</CustomField>