force-app/main/default/objects/Opportunity/fields/Compteur_OPPT__c.field-meta.xml
<CustomField>
    <fullName>Compteur_OPPT__c</fullName>
    <externalId>true</externalId>
    <label>Compteur OPPT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>