force-app/main/default/objects/Opportunity/fields/Conditions_de_restauration__c.field-meta.xml
<CustomField>
    <fullName>Conditions_de_restauration__c</fullName>
    <label>Conditions de restauration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Les frais de restauration sont inclus</fullName>
            </value>
            <value>
                <fullName>Les frais de restauration sont en sus 16€H.T. par personne et par jour (TVA 10%)</fullName>
            </value>
            <value>
                <fullName>Les frais de restauration sont en sus 30€H.T. par personne et par jour (TVA 10%)</fullName>
            </value>
            <value>
                <fullName>Les frais de restauration sont offerts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>