force-app/main/default/objects/Opportunity/fields/Contact_Ann_e_d_ligibilit_BBA__c.field-meta.xml
<CustomField>
    <fullName>Contact_Ann_e_d_ligibilit_BBA__c</fullName>
    <formula>Contact_central__r.Ann_e_d_gibilit__c</formula>
    <label>Contact : Année d&apos;éligibilité BBA</label>
    <type>Text</type>
</CustomField>