force-app/main/default/objects/Opportunity/fields/Contact_Canal_d_acquisition__c.field-meta.xml
<CustomField>
    <fullName>Contact_Canal_d_acquisition__c</fullName>
    <formula>TEXT(Contact_central__r.Nature_du_premier_contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact : Canal d&apos;acquisition</label>
    <type>Text</type>
</CustomField>