force-app/main/default/objects/Opportunity/fields/Contact_central__c.field-meta.xml
<CustomField>
    <fullName>Contact_central__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact central</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>