force-app/main/default/objects/Opportunity/fields/Contact_Code_postal__c.field-meta.xml
<CustomField>
    <fullName>Contact_Code_postal__c</fullName>
    <formula>Contact_central__r.Adresse_code_postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact : Code postal</label>
    <type>Text</type>
</CustomField>