force-app/main/default/objects/Opportunity/fields/Contact_D_tail_canal_d_acquisition__c.field-meta.xml
<CustomField>
    <fullName>Contact_D_tail_canal_d_acquisition__c</fullName>
    <formula>Contact_central__r.Sous_provenance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact : Détail canal d&apos;acquisition</label>
    <type>Text</type>
</CustomField>