force-app/main/default/objects/Opportunity/fields/Contact_Date_cr_ation_contact__c.field-meta.xml
<CustomField>
    <fullName>Contact_Date_cr_ation_contact__c</fullName>
    <formula>Contact_central__r.Date_de_cr_ation_contact__c</formula>
    <label>Contact : Date création contact</label>
    <type>DateTime</type>
</CustomField>