force-app/main/default/objects/Opportunity/fields/Contact_Dernier_Dipl_me_ou_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Contact_Dernier_Dipl_me_ou_en_cours__c</fullName>
    <formula>Contact_central__r.Dernier_dipl_me_ou_en_cours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact : Dernier Diplôme (ou en cours)</label>
    <type>Text</type>
</CustomField>