force-app/main/default/objects/Opportunity/fields/Contact_Etablissement__c.field-meta.xml
<CustomField>
    <fullName>Contact_Etablissement__c</fullName>
    <formula>Contact_central__r.Etablissement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact : Etablissement</label>
    <type>Text</type>
</CustomField>