force-app/main/default/objects/Opportunity/fields/Contact_IINTRA_non_repris__c.field-meta.xml
<CustomField>
    <fullName>Contact_IINTRA_non_repris__c</fullName>
    <label>Contact IINTRA non repris</label>
    <length>30</length>
    <type>Text</type>
</CustomField>