force-app/main/default/objects/Opportunity/fields/Contact_Nom_du_propri_taire__c.field-meta.xml
<CustomField>
    <fullName>Contact_Nom_du_propri_taire__c</fullName>
    <formula>Contact_central__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact : Nom du propriétaire</label>
    <type>Text</type>
</CustomField>