force-app/main/default/objects/Opportunity/fields/Contact_Pays_de_R_sidence__c.field-meta.xml
<CustomField>
    <fullName>Contact_Pays_de_R_sidence__c</fullName>
    <formula>Contact_central__r.Pays__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact : Pays de Résidence</label>
    <type>Text</type>
</CustomField>