force-app/main/default/objects/Opportunity/fields/Contact_Pr_nom_du_propri_taire__c.field-meta.xml
<CustomField>
    <fullName>Contact_Pr_nom_du_propri_taire__c</fullName>
    <formula>Contact_central__r.Owner.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact : Prénom du propriétaire</label>
    <type>Text</type>
</CustomField>