force-app/main/default/objects/Opportunity/fields/Contact_Souhait_programme__c.field-meta.xml
<CustomField>
    <fullName>Contact_Souhait_programme__c</fullName>
    <formula>Contact_central__r.Souhait_programme__c</formula>
    <label>Contact : Souhait programme</label>
    <type>Text</type>
</CustomField>