force-app/main/default/objects/Opportunity/fields/Contact_Type_d_enregistrement__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type_d_enregistrement__c</fullName>
    <formula>Contact_central__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact : Type d&apos;enregistrement</label>
    <type>Text</type>
</CustomField>