force-app/main/default/objects/Opportunity/fields/Contact_Zone_de_commercialisation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Zone_de_commercialisation__c</fullName>
    <formula>Contact_central__r.Pays__r.Zone_de_commercialisation_rapport__c</formula>
    <label>Contact:Zone de commercialisation</label>
    <type>Text</type>
</CustomField>