force-app/main/default/objects/Opportunity/fields/Contrat_cadre__c.field-meta.xml
<CustomField>
    <fullName>Contrat_cadre__c</fullName>
    <formula>Account.Contrat_cadre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrat cadre</label>
    <type>Checkbox</type>
</CustomField>