force-app/main/default/objects/Opportunity/fields/D_tails_sur_la_prestation__c.field-meta.xml
<CustomField>
    <fullName>D_tails_sur_la_prestation__c</fullName>
    <label>Détails sur la prestation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>