force-app/main/default/objects/Opportunity/fields/Data_Loader_Util__c.field-meta.xml
<CustomField>
    <fullName>Data_Loader_Util__c</fullName>
    <description>Ce champ sert pour simuler des màj depuis Data Loader, ceci afin d&apos;affecter la valeur du champ Date de Mise à Jour</description>
    <inlineHelpText>Ce champ sert pour simuler des màj depuis Data Loader, ceci afin d&apos;affecter la valeur du champ Date de Mise à Jour</inlineHelpText>
    <label>Data Loader Util</label>
    <type>TextArea</type>
</CustomField>