force-app/main/default/objects/Opportunity/fields/date_crea_fiche_util__c.field-meta.xml
<CustomField>
    <fullName>date_crea_fiche_util__c</fullName>
    <formula>TEXT(Date_de_mise__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>date crea fiche util</label>
    <type>Text</type>
</CustomField>