force-app/main/default/objects/Opportunity/fields/Date_de_Cr_ation_fiche_UI__c.field-meta.xml
<CustomField>
    <fullName>Date_de_Cr_ation_fiche_UI__c</fullName>
    <formula>DATE(VALUE(MID(date_crea_fiche_util__c,1,4)), VALUE(MID(date_crea_fiche_util__c,6,2)), VALUE(MID(date_crea_fiche_util__c,9,2)))</formula>
    <label>Date de Création de la fiche</label>
    <type>Date</type>
</CustomField>