force-app/main/default/objects/Opportunity/fields/Date_de_d_but__c.field-meta.xml
<CustomField>
    <fullName>Date_de_d_but__c</fullName>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>