force-app/main/default/objects/Opportunity/fields/Date_de_mise__c.field-meta.xml
<CustomField>
    <fullName>Date_de_mise__c</fullName>
    <label>Date de création fiche</label>
    <type>DateTime</type>
</CustomField>