force-app/main/default/objects/Opportunity/fields/Date_de_r_f_rence_fiscale__c.field-meta.xml
<CustomField>
    <fullName>Date_de_r_f_rence_fiscale__c</fullName>
    <label>Date de référence fiscale</label>
    <type>Date</type>
</CustomField>