force-app/main/default/objects/Opportunity/fields/Date_de_relance__c.field-meta.xml
<CustomField>
    <fullName>Date_de_relance__c</fullName>
    <label>Date de relance</label>
    <type>Date</type>
</CustomField>