force-app/main/default/objects/Opportunity/fields/Date_de_remerciement__c.field-meta.xml
<CustomField>
    <fullName>Date_de_remerciement__c</fullName>
    <label>Date de remerciement</label>
    <type>Date</type>
</CustomField>