force-app/main/default/objects/Opportunity/fields/Date_de_rentr_e_cloture_2_mois__c.field-meta.xml
<CustomField>
    <fullName>Date_de_rentr_e_cloture_2_mois__c</fullName>
    <formula>AND(
TODAY()&gt;=DATE(YEAR(CloseDate),MONTH(CloseDate)-2,DAY(CloseDate)),
TODAY()&lt;=CloseDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de rentrée / cloture - 2 mois</label>
    <type>Checkbox</type>
</CustomField>