force-app/main/default/objects/Opportunity/fields/Date_de_rentr_e_cloture_today__c.field-meta.xml
<CustomField>
    <fullName>Date_de_rentr_e_cloture_today__c</fullName>
    <formula>CloseDate&lt;=TODAY()</formula>
    <label>Date de rentrée / cloture &lt;= today</label>
    <type>Checkbox</type>
</CustomField>