force-app/main/default/objects/Opportunity/fields/Date_de_s_lection_estim_e__c.field-meta.xml
<CustomField>
    <fullName>Date_de_s_lection_estim_e__c</fullName>
    <label>Date de sélection estimée</label>
    <type>Date</type>
</CustomField>