force-app/main/default/objects/Opportunity/fields/Date_de_signature_du_partenariat__c.field-meta.xml
<CustomField>
    <fullName>Date_de_signature_du_partenariat__c</fullName>
    <description>Champs servant à renseigner la date de signature du partenariat.
Utilisé uniquement dans le process Fundraising B2B.</description>
    <label>Date de signature du partenariat</label>
    <type>Date</type>
</CustomField>