force-app/main/default/objects/Opportunity/fields/Date_de_soutenance_avec_le_client__c.field-meta.xml
<CustomField>
    <fullName>Date_de_soutenance_avec_le_client__c</fullName>
    <description>Définit date de soutenance avec le client</description>
    <label>Date de soutenance avec le client</label>
    <type>Date</type>
</CustomField>