force-app/main/default/objects/Opportunity/fields/Date_decision__c.field-meta.xml
<CustomField>
    <fullName>Date_decision__c</fullName>
    <label>Date de décision</label>
    <type>Date</type>
</CustomField>