force-app/main/default/objects/Opportunity/fields/Date_du_don__c.field-meta.xml
<CustomField>
    <fullName>Date_du_don__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>Date du don</label>
    <type>Date</type>
</CustomField>