force-app/main/default/objects/Opportunity/fields/Date_evenement__c.field-meta.xml
<CustomField>
    <fullName>Date_evenement__c</fullName>
    <label>Date de l&apos;évènement</label>
    <type>Date</type>
</CustomField>