force-app/main/default/objects/Opportunity/fields/Date_fin_formation__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_formation__c</fullName>
    <description>Ce champ a été ajouté surtout pour le mapping &quot;ARPEGE&quot; (devis) et AGRESSO</description>
    <label>Date fin de formation</label>
    <type>Date</type>
</CustomField>