force-app/main/default/objects/Opportunity/fields/Date_fin_partenariat__c.field-meta.xml
<CustomField>
    <fullName>Date_fin_partenariat__c</fullName>
    <description>Champs date servant à renseigner la fin du partenariat.
Utilisé uniquement dans le process Fundraising B2B</description>
    <label>Date de fin du partenariat</label>
    <type>Date</type>
</CustomField>