force-app/main/default/objects/Opportunity/fields/dateMajNotEqualsCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>dateMajNotEqualsCreatedDate__c</fullName>
    <formula>Date_de_mise__c != CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dateMajNotEqualsCreatedDate</label>
    <type>Checkbox</type>
</CustomField>