force-app/main/default/objects/Opportunity/fields/Demande_inscription_newsletter__c.field-meta.xml
<CustomField>
    <fullName>Demande_inscription_newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande inscription newsletter</label>
    <type>Checkbox</type>
</CustomField>