force-app/main/default/objects/Opportunity/fields/Detail_de_l_opportunite__c.field-meta.xml
<CustomField>
    <fullName>Detail_de_l_opportunite__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id ,&quot;Cliquer ici&quot; ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Détail de l&apos;opportunité</label>
    <type>Text</type>
</CustomField>