force-app/main/default/objects/Opportunity/fields/Detail_projet__c.field-meta.xml
<CustomField>
    <fullName>Detail_projet__c</fullName>
    <label>Détail du projet</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>