force-app/main/default/objects/Opportunity/fields/Diff_rentiel_montant__c.field-meta.xml
<CustomField>
    <fullName>Diff_rentiel_montant__c</fullName>
    <formula>Amount - Montant_promesse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Différentiel montant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>