force-app/main/default/objects/Opportunity/fields/Domaine_d_tudes__c.field-meta.xml
<CustomField>
    <fullName>Domaine_d_tudes__c</fullName>
    <formula>TEXT(Contact_central__r.Domaine__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domaine d&apos;études</label>
    <type>Text</type>
</CustomField>