force-app/main/default/objects/Opportunity/fields/Don_Anonyme__c.field-meta.xml
<CustomField>
    <fullName>Don_Anonyme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don Anonyme</label>
    <type>Checkbox</type>
</CustomField>