force-app/main/default/objects/Opportunity/fields/Dur_e__c.field-meta.xml
<CustomField>
    <fullName>Dur_e__c</fullName>
    <description>Champs utilisé uniquement dans le process Fundraising B2B</description>
    <label>Durée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>