force-app/main/default/objects/Opportunity/fields/Eligibilit_de_l_ge__c.field-meta.xml
<CustomField>
    <fullName>Eligibilit_de_l_ge__c</fullName>
    <label>Eligibilité de l&apos;âge</label>
    <length>35</length>
    <type>Text</type>
</CustomField>