force-app/main/default/objects/Opportunity/fields/Eligibilit_du_niveau_d_tudes__c.field-meta.xml
<CustomField>
    <fullName>Eligibilit_du_niveau_d_tudes__c</fullName>
    <label>Eligibilité du niveau d&apos;études</label>
    <length>35</length>
    <type>Text</type>
</CustomField>