force-app/main/default/objects/Opportunity/fields/Eligibilite__c.field-meta.xml
<CustomField>
    <fullName>Eligibilite__c</fullName>
    <label>Eligibilité calculée</label>
    <length>20</length>
    <type>Text</type>
</CustomField>