force-app/main/default/objects/Opportunity/fields/Exercice_de_report__c.field-meta.xml
<CustomField>
    <fullName>Exercice_de_report__c</fullName>
    <label>Exercice de report</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2022</fullName>
            </value>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2031</fullName>
            </value>
            <value>
                <fullName>2032</fullName>
            </value>
            <value>
                <fullName>2033</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>