force-app/main/default/objects/Opportunity/fields/Exercice_Intra__c.field-meta.xml
<CustomField>
    <fullName>Exercice_Intra__c</fullName>
    <formula>IF( MONTH( CloseDate )  &lt; 9 ,
 TEXT( YEAR( CloseDate ) - 1) + &quot;/&quot; +  TEXT(YEAR( CloseDate )),
 TEXT( YEAR( CloseDate )) + &quot;/&quot; +   TEXT(YEAR( CloseDate ) + 1))</formula>
    <label>Exercice EMLYON Intra</label>
    <type>Text</type>
</CustomField>