force-app/main/default/objects/Opportunity/fields/ExerciceNum_ro__c.field-meta.xml
<CustomField>
    <fullName>ExerciceNum_ro__c</fullName>
    <label>Exercice</label>
    <length>4</length>
    <type>Text</type>
</CustomField>