force-app/main/default/objects/Opportunity/fields/Famille__c.field-meta.xml
<CustomField>
    <fullName>Famille__c</fullName>
    <label>Famille</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Gamme__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accompagnement entreprises = RDV</fullName>
            </value>
            <value>
                <fullName>Accompagnement pédagogique</fullName>
            </value>
            <value>
                <fullName>Accord Cadre Formation Continue =</fullName>
            </value>
            <value>
                <fullName>Annuaires</fullName>
            </value>
            <value>
                <fullName>Atelier</fullName>
            </value>
            <value>
                <fullName>Business Weeks</fullName>
            </value>
            <value>
                <fullName>Careers Days</fullName>
            </value>
            <value>
                <fullName>Célébration</fullName>
            </value>
            <value>
                <fullName>Chaires Conjointes</fullName>
            </value>
            <value>
                <fullName>Chaires d’enseignement et de recherche (&gt;1Me sur 4/5 ans)</fullName>
            </value>
            <value>
                <fullName>Colloques</fullName>
            </value>
            <value>
                <fullName>Conférence</fullName>
            </value>
            <value>
                <fullName>Conférences non payantes (notoriété)</fullName>
            </value>
            <value>
                <fullName>Conférences non payantes (pédagogiques)</fullName>
            </value>
            <value>
                <fullName>Conférences non payantes (type gd public)</fullName>
            </value>
            <value>
                <fullName>Conférences non payantes (type scientifique)</fullName>
            </value>
            <value>
                <fullName>Conférences payantes (par l&apos;auditeur, participant)</fullName>
            </value>
            <value>
                <fullName>Conférences payantes (par l&apos;intervenant-casHEC)</fullName>
            </value>
            <value>
                <fullName>Conseil institutionnel =</fullName>
            </value>
            <value>
                <fullName>Corporate Discovery Session</fullName>
            </value>
            <value>
                <fullName>Dons Fondation =&gt; individu ou entreprise (idem EMLYON)</fullName>
            </value>
            <value>
                <fullName>Enquêtes et Stats</fullName>
            </value>
            <value>
                <fullName>Entretien individuel</fullName>
            </value>
            <value>
                <fullName>Evènements corporate payants organisés par la comm</fullName>
            </value>
            <value>
                <fullName>Evenements EMLYON.</fullName>
            </value>
            <value>
                <fullName>Evenements EMLYON. (A voir avec BB)</fullName>
            </value>
            <value>
                <fullName>Evenements EMLYON (à positionner confer supra - voir Bernard)</fullName>
            </value>
            <value>
                <fullName>Evenements FOREVER co-organisés</fullName>
            </value>
            <value>
                <fullName>Evènements FOREVER organisés par EMLYON FOREVER</fullName>
            </value>
            <value>
                <fullName>Expert Panels OU Table rondes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>