force-app/main/default/objects/Opportunity/fields/FORM_debut_annee_scolaire__c.field-meta.xml
<CustomField>
    <fullName>FORM_debut_annee_scolaire__c</fullName>
    <formula>DATEVALUE(TEXT(VALUE(ExerciceNum_ro__c)-2)&amp;&quot;-09-01&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FORM - debut annee scolaire</label>
    <type>Date</type>
</CustomField>