force-app/main/default/objects/Opportunity/fields/FORM_Exercice_en_cours__c.field-meta.xml
<CustomField>
    <fullName>FORM_Exercice_en_cours__c</fullName>
    <formula>AND 
( 
TODAY()&gt;FORM_debut_annee_scolaire__c 
, 
TODAY()&lt;FORM_fin_annee_scolaire__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FORM Exercice en cours/Suivant</label>
    <type>Checkbox</type>
</CustomField>