force-app/main/default/objects/Opportunity/fields/FORM_fin_annee_scolaire__c.field-meta.xml
<CustomField>
    <fullName>FORM_fin_annee_scolaire__c</fullName>
    <formula>DATEVALUE(

ExerciceNum_ro__c 
&amp;&quot;-08-01&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FORM - fin annee scolaire</label>
    <type>Date</type>
</CustomField>