force-app/main/default/objects/Opportunity/fields/Format_contrat__c.field-meta.xml
<CustomField>
    <fullName>Format_contrat__c</fullName>
    <label>Format contrat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>OPP-FCT10</fullName>
            </value>
            <value>
                <fullName>OPP-FCT20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>