force-app/main/default/objects/Opportunity/fields/Formule_nb_oppo_cours__c.field-meta.xml
<CustomField>
    <fullName>Formule_nb_oppo_cours__c</fullName>
    <formula>Contact_central__r.Nombre_opportunites_sur_criteres__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&apos;opportunités en cours</label>
    <type>Text</type>
</CustomField>