force-app/main/default/objects/Opportunity/fields/Formule_nb_oppo_total__c.field-meta.xml
<CustomField>
    <fullName>Formule_nb_oppo_total__c</fullName>
    <formula>Contact_central__r.Nombre_opportunit_s__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre d&apos;opportunités total</label>
    <type>Text</type>
</CustomField>