force-app/main/default/objects/Opportunity/fields/FormuleInterfaceIDLogin__c.field-meta.xml
<CustomField>
    <fullName>FormuleInterfaceIDLogin__c</fullName>
    <formula>MID( InterfaceExternalId__c , 
8, 
LEN(InterfaceExternalId__c ) -6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormuleInterfaceIDLogin</label>
    <type>Text</type>
</CustomField>